@@ -1,0 +1,4 @@
+Makefile
+Makefile.md5
+!NAME!
+!NAME!_version.h
