@@ -3,31 +3,21 @@
 # You have following:
 # - Linux
 # - tinolib in the subdirectory tino/
-# - A source with a main() called xxxNAMExxx.c
+# - A source with a main() called !NAME!.c
+#   (Usually !NAME! is `basename "$PWD"`)
 #
 # Following will be extended and might change slightly.
 # However I want it to stay this simple, or even more simple!
 #
-# Now create a stub Makefile.tino like this:
-# --------8<--------8<--------8<--------
-#       PROG=xxxNAMExxx
-#      PROGS=$(PROG)
-#       OBJS=
-#    LDFLAGS=
-#     LDLIBS=
-#      CLEAN=
-#  DISTCLEAN=
-# # TINOCOPY=
-# #   TINOINC=tino_common.h
-# #   TINOLIB=tino/lib.h
-# ##END##
-# Makefile::
-#	$(MAKE) -C tino tino HERE="$(PWD)"
-# -------->8-------->8-------->8--------
-# Then do:
+# To start from fresh, just do:
+#	cp -i tino/*.dist tino/.*.dist .
+#	rename .dist "" *.dist .*.dist
+#	vi Makefile.tino
+#	# Replace !NAME! with your program's name
 #	make -f Makefile.tino
 # this will create the initial Makefile.
-# From now on the Makefile will update itself.
+# From now on the Makefile will update itself from Makefile.tino
+# (some makes need to call them twice or thrice).
 #
 # Note that the basic functions of the Makefile then can live
 # without the sub directory tino/
@@ -48,8 +38,11 @@
 # However "make all" shall still do, I hope.
 #
 # Prerequisites for "make all" in a distribution shall be:
-# 1) make
-# 2) gawk
+# 1) make  (not even GNU make)
+# 2) awk   (perhaps you need GNU awk, sorry)
+# 3) touch
+# 4) A ANSI-C compiler, of course, which make knows about.
+# 5) The proper set of includes and libraries (possibly all GNU).
 # Nothing else (not even a bash, perl etc.) shall be needed,
 # and not a compiler with support for -M or -MM.
 #
@@ -59,10 +52,22 @@
 # And that the distribution can be independent of tinolib if the sources
 # do not depend on this library.
 #
+# All portability issues shall be handled in tinolib in future,
+# such that you do not need a single #if in your source
+# except for compile time features.  You get the idea.
+#
+# Perhaps there sometimes even will be a "simple build" script
+# which neither needs make nor awk nor touch!
+# I dislike hen egg problems.  I want you to be able to solve
+# all problems easily with just an editor and the compiler.
+#
 # That's why it is as it is.
 #
 # $Log$
-# Revision 1.8  2004-08-22 05:47:34  Administrator
+# Revision 1.9  2004-08-24 23:50:11  tino
+# Quickstart (.dist) files added
+#
+# Revision 1.8  2004/08/22 05:47:34  Administrator
 # Now Makefile generator understands to look into variables set in Makefile.
 # This way Auto-Dependicies can be improved a little step and more important,
 # the "TINOCOPY" functionality was added, such that I can copy files from
